--- a/css/main.css
+++ b/css/main.css
@@ -349,6 +349,7 @@ svg path {
 .resume_description strong a {
     font-size: 12px;    
     font-style: italic;
+    outline: none;
   
 }  
 .resume_container .resume_item p{
