--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,12 @@ body input:required:valid,
 body textarea:required:valid {
   color: green; }
 
+a:hover,
+a:focus,
+a:visited {
+  outline: none  
+}  
+
 .hidden {
   display: none; }
 
